[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stashbus-models"
version = "0.1.0"
dependencies = [
  "Django",
]
requires-python = ">=3.12"
authors = [
  {name = "Jaroslav Henner", email = "jaroslav.henner@gmail.com"},
]
maintainers = [
  {name = "Jaroslav Henner", email = "jaroslav.henner@gmail.com"}
]
description = "MQTT and MODBus stashing system"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["bus", "logging"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Log Analysis",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
test = [
  "black >= 25.1.0",
  "pre-commit >= 4.2.0",
  "pytest-recording >= 0.13.3",
  "pytest-doctestplus==1.4.0"
]
dev = [
  "mypy >= 1.15.0",
]

[project.urls]
Homepage = "https://github.com/jarovo/stashbus"
Repository = "https://github.com/jarovo/stashbus_mqtt_stasher"

[tool.hatch.build.targets.wheel]
packages = ["src/stashbus"]

[tool.pytest.ini_options]
#addopts = "--doctest-plus --doctest-modules --doctest-glob='*.md'"
